--- a/package.json
+++ b/package.json
@@ -6,21 +6,51 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.1.0",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.4.2",
+    "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "0.0.18",
+    "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^6.6.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "flowbite-react": "^0.9.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-email": "2.1.3",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-text-transition": "^3.1.0",
+    "resend": "3.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
